tests/invalid/missing_function_paren.ar
fn main( {
    const i: u8;
}
